<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_white"
    android:orientation="vertical"
    tools:context="android.dev.kalmurzaeff.neonote.ui.update.UpdateNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/title_txt"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/title_edt"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/edit_text_background"
            android:elevation="3dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:hint="@string/title_edt"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="LabelFor" />


        <TextView
            android:id="@+id/description_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/description_txt"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/description_edt"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/edit_text_background"
            android:elevation="3dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:hint="@string/description_edt"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="LabelFor" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/select_color"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:clipToPadding="true"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_item_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/upload_txt"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/remove_image_btn"
                android:src="@drawable/ic_close"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="7dp"
                android:layout_marginBottom="4dp"
                android:elevation="1dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_add_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/add_image_btn"
                    android:scaleType="centerCrop"
                    android:src="@drawable/place_holder" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/OrangeRed"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/save_btn"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />
    </LinearLayout>

</ScrollView>